fix docker image name

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: arrs-rss-converter
+  IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/arrs-rss-converter
 
 jobs:
   build:
