--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - SERVER_PORT=3030
       - RUST_LOG=${RUST_LOG:-info}
     volumes:
-      - ./config.toml:/app/config/config.toml:ro
+      - ./config.toml:/app/config.toml:ro
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3030/health"]
