--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,9 @@ RSS_SOURCE_URL=https://example.com/rss.xml
 SERVER_HOST=127.0.0.1
 SERVER_PORT=3030
 
+# 转换配置
+CONVERSION_DEFAULT_PRIORITY=100
+
 # 日志级别
 RUST_LOG=info
+LOGGING_LEVEL=info
