--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - SERVER_HOST=0.0.0.0
       - SERVER_PORT=3030
       - RUST_LOG=${RUST_LOG:-info}
+      - CONVERSION_DEFAULT_PRIORITY=${CONVERSION_DEFAULT_PRIORITY:-100}
+      - LOGGING_LEVEL=${LOGGING_LEVEL:-info}
     volumes:
       - ./config.toml:/app/config.toml:ro
     restart: unless-stopped
